--- a/Docs/06-پرامپت-ها/02-فرانت‌اند/پرامپت-احراز-هویت-فرانت‌اند.md
+++ b/Docs/06-پرامپت-ها/02-فرانت‌اند/پرامپت-احراز-هویت-فرانت‌اند.md
@@ -1,1 +1,498 @@
- 
+ # پرامپت توسعه سیستم احراز هویت در فرانت‌اند
+
+این پرامپت برای توسعه سیستم احراز هویت در فرانت‌اند پروژه ایجنت هادربون طراحی شده است. با استفاده از این پرامپت می‌توانید به سرعت کامپوننت‌ها و سرویس‌های مورد نیاز برای احراز هویت کاربران را پیاده‌سازی کنید.
+
+## پرامپت کامل
+
+```
+پروژه: ایجنت هادربون (فرانت‌اند React با TypeScript و Tailwind CSS)
+
+هدف: پیاده‌سازی سیستم احراز هویت در فرانت‌اند شامل صفحات ورود و ثبت‌نام، کانتکست احراز هویت، و مدیریت توکن JWT.
+
+زمینه: این یک پروژه مستندساز هوشمند مبتنی بر هوش مصنوعی است که به برنامه‌نویسان در مستندسازی پروژه‌ها کمک می‌کند. بک‌اند آن با Node.js/Express و Prisma ORM پیاده‌سازی شده است.
+
+## ۱. فایل‌های مورد نیاز:
+
+1. `src/services/api.ts`: تنظیمات پایه Axios
+2. `src/services/authService.ts`: سرویس احراز هویت
+3. `src/context/AuthContext.tsx`: کانتکست احراز هویت
+4. `src/hooks/useAuth.ts`: هوک سفارشی برای استفاده از کانتکست احراز هویت
+5. `src/pages/auth/Login.tsx`: صفحه ورود
+6. `src/pages/auth/Register.tsx`: صفحه ثبت‌نام
+7. `src/components/auth/LoginForm.tsx`: کامپوننت فرم ورود
+8. `src/components/auth/RegisterForm.tsx`: کامپوننت فرم ثبت‌نام
+9. `src/routes/ProtectedRoute.tsx`: کامپوننت مسیر محافظت شده
+
+## ۲. وابستگی‌های مورد نیاز:
+- axios: برای ارتباط با API
+- react-router-dom: برای مدیریت مسیرها
+- react-hook-form: برای مدیریت فرم‌ها
+- zod: برای اعتبارسنجی فرم‌ها
+- @hookform/resolvers: برای استفاده از Zod با React Hook Form
+
+## ۳. جزئیات پیاده‌سازی:
+
+### ۳.۱. `src/services/api.ts`:
+این فایل باید تنظیمات پایه Axios را پیاده‌سازی کند:
+- ایجاد نمونه Axios با آدرس پایه API
+- تنظیم interceptor برای افزودن توکن JWT به هدر درخواست‌ها
+- تنظیم interceptor برای مدیریت خطاها (مثلاً خروج خودکار در صورت دریافت خطای 401)
+
+### ۳.۲. `src/services/authService.ts`:
+این فایل باید توابع زیر را پیاده‌سازی کند:
+- `register`: برای ثبت‌نام کاربر جدید
+- `login`: برای ورود کاربر
+- `logout`: برای خروج کاربر
+- `getCurrentUser`: برای دریافت اطلاعات کاربر فعلی
+- `getToken`: برای دریافت توکن JWT از localStorage
+- `setToken`: برای ذخیره توکن JWT در localStorage
+- `removeToken`: برای حذف توکن JWT از localStorage
+
+### ۳.۳. `src/context/AuthContext.tsx`:
+این فایل باید یک کانتکست React را پیاده‌سازی کند که:
+- وضعیت احراز هویت کاربر را مدیریت کند (loading, isAuthenticated, user)
+- توابع مورد نیاز برای احراز هویت را ارائه دهد (login, register, logout)
+- در هنگام بارگذاری اولیه، وضعیت احراز هویت را بررسی کند
+
+### ۳.۴. `src/hooks/useAuth.ts`:
+این فایل باید یک هوک سفارشی را پیاده‌سازی کند که:
+- به کانتکست احراز هویت دسترسی داشته باشد
+- داده‌ها و توابع کانتکست را به صورت آسان در دسترس کامپوننت‌ها قرار دهد
+
+### ۳.۵. `src/components/auth/LoginForm.tsx`:
+این فایل باید یک کامپوننت فرم ورود را پیاده‌سازی کند که:
+- از React Hook Form برای مدیریت فرم استفاده کند
+- از Zod برای اعتبارسنجی داده‌ها استفاده کند
+- از کانتکست احراز هویت برای ورود کاربر استفاده کند
+- وضعیت بارگذاری و خطا را مدیریت کند
+
+### ۳.۶. `src/components/auth/RegisterForm.tsx`:
+این فایل باید یک کامپوننت فرم ثبت‌نام را پیاده‌سازی کند که:
+- از React Hook Form برای مدیریت فرم استفاده کند
+- از Zod برای اعتبارسنجی داده‌ها استفاده کند
+- از کانتکست احراز هویت برای ثبت‌نام کاربر استفاده کند
+- وضعیت بارگذاری و خطا را مدیریت کند
+
+### ۳.۷. `src/pages/auth/Login.tsx`:
+این فایل باید یک صفحه ورود را پیاده‌سازی کند که:
+- از کامپوننت LoginForm استفاده کند
+- طراحی مناسب با Tailwind CSS داشته باشد
+- در صورت احراز هویت قبلی، کاربر را به صفحه داشبورد هدایت کند
+
+### ۳.۸. `src/pages/auth/Register.tsx`:
+این فایل باید یک صفحه ثبت‌نام را پیاده‌سازی کند که:
+- از کامپوننت RegisterForm استفاده کند
+- طراحی مناسب با Tailwind CSS داشته باشد
+- در صورت احراز هویت قبلی، کاربر را به صفحه داشبورد هدایت کند
+
+### ۳.۹. `src/routes/ProtectedRoute.tsx`:
+این فایل باید یک کامپوننت مسیر محافظت شده را پیاده‌سازی کند که:
+- وضعیت احراز هویت کاربر را بررسی کند
+- در صورت عدم احراز هویت، کاربر را به صفحه ورود هدایت کند
+- در حین بررسی وضعیت احراز هویت، یک نشانگر بارگذاری نمایش دهد
+
+## ۴. تایپ‌های مورد نیاز:
+
+```typescript
+// تایپ کاربر
+interface User {
+  id: string;
+  username: string;
+  email: string;
+  firstName?: string;
+  lastName?: string;
+}
+
+// تایپ پاسخ احراز هویت از API
+interface AuthResponse {
+  success: boolean;
+  token?: string;
+  user?: User;
+  message?: string;
+}
+
+// تایپ داده‌های ورود
+interface LoginData {
+  email: string;
+  password: string;
+}
+
+// تایپ داده‌های ثبت‌نام
+interface RegisterData {
+  username: string;
+  email: string;
+  password: string;
+  confirmPassword: string;
+  firstName?: string;
+  lastName?: string;
+}
+
+// تایپ کانتکست احراز هویت
+interface AuthContextType {
+  user: User | null;
+  isAuthenticated: boolean;
+  isLoading: boolean;
+  login: (data: LoginData) => Promise<void>;
+  register: (data: RegisterData) => Promise<void>;
+  logout: () => void;
+}
+```
+
+لطفاً کدها را با رعایت استانداردهای TypeScript، با تایپ‌های دقیق، و با مدیریت مناسب خطاها پیاده‌سازی کنید. همچنین، طراحی رابط کاربری باید از Tailwind CSS استفاده کند و از راست-به-چپ (RTL) برای متن فارسی پشتیبانی کند.
+```
+
+## نمونه خروجی مورد انتظار
+
+پس از استفاده از این پرامپت، انتظار داریم که هوش مصنوعی فایل‌های زیر را تولید کند:
+
+### ۱. `src/services/api.ts`
+
+```typescript
+/**
+ * @file src/services/api.ts
+ * @description تنظیمات پایه Axios برای ارتباط با API
+ */
+
+import axios from 'axios';
+import authService from './authService';
+
+// آدرس پایه API از متغیرهای محیطی
+const API_BASE_URL = import.meta.env.VITE_API_BASE_URL || 'http://localhost:5550/api/v1';
+
+// ایجاد نمونه axios با تنظیمات پایه
+const api = axios.create({
+  baseURL: API_BASE_URL,
+  headers: {
+    'Content-Type': 'application/json',
+  },
+});
+
+// افزودن توکن JWT به هدر درخواست‌ها
+api.interceptors.request.use(
+  (config) => {
+    const token = authService.getToken();
+    if (token) {
+      config.headers.Authorization = `Bearer ${token}`;
+    }
+    return config;
+  },
+  (error) => Promise.reject(error)
+);
+
+// مدیریت خطاها (مثلاً خروج خودکار در صورت دریافت خطای 401)
+api.interceptors.response.use(
+  (response) => response,
+  (error) => {
+    if (error.response?.status === 401) {
+      // در صورت دریافت خطای 401 (Unauthorized)، کاربر را خارج می‌کنیم
+      authService.removeToken();
+      window.location.href = '/login';
+    }
+    return Promise.reject(error);
+  }
+);
+
+export default api;
+```
+
+### ۲. `src/services/authService.ts`
+
+```typescript
+/**
+ * @file src/services/authService.ts
+ * @description سرویس احراز هویت برای ارتباط با API احراز هویت
+ */
+
+import api from './api';
+import { AuthResponse, LoginData, RegisterData, User } from '../types';
+
+// کلید ذخیره توکن در localStorage
+const TOKEN_KEY = 'haderboon_token';
+
+const authService = {
+  /**
+   * ثبت‌نام کاربر جدید
+   * @param data داده‌های ثبت‌نام
+   * @returns پاسخ API
+   */
+  async register(data: RegisterData): Promise<AuthResponse> {
+    try {
+      // حذف confirmPassword قبل از ارسال به API
+      const { confirmPassword, ...registerData } = data;
+      const response = await api.post<AuthResponse>('/auth/register', registerData);
+      
+      // ذخیره توکن در localStorage
+      if (response.data.token) {
+        this.setToken(response.data.token);
+      }
+      
+      return response.data;
+    } catch (error: any) {
+      throw new Error(
+        error.response?.data?.message || 'خطا در ثبت‌نام. لطفاً دوباره تلاش کنید.'
+      );
+    }
+  },
+
+  /**
+   * ورود کاربر
+   * @param data داده‌های ورود
+   * @returns پاسخ API
+   */
+  async login(data: LoginData): Promise<AuthResponse> {
+    try {
+      const response = await api.post<AuthResponse>('/auth/login', data);
+      
+      // ذخیره توکن در localStorage
+      if (response.data.token) {
+        this.setToken(response.data.token);
+      }
+      
+      return response.data;
+    } catch (error: any) {
+      throw new Error(
+        error.response?.data?.message || 'خطا در ورود. لطفاً دوباره تلاش کنید.'
+      );
+    }
+  },
+
+  /**
+   * خروج کاربر
+   */
+  logout(): void {
+    this.removeToken();
+  },
+
+  /**
+   * دریافت اطلاعات کاربر فعلی
+   * @returns اطلاعات کاربر
+   */
+  async getCurrentUser(): Promise<User> {
+    try {
+      const response = await api.get<{ success: boolean; user: User }>('/auth/me');
+      return response.data.user;
+    } catch (error: any) {
+      throw new Error(
+        error.response?.data?.message || 'خطا در دریافت اطلاعات کاربر'
+      );
+    }
+  },
+
+  /**
+   * دریافت توکن JWT از localStorage
+   * @returns توکن JWT یا null
+   */
+  getToken(): string | null {
+    return localStorage.getItem(TOKEN_KEY);
+  },
+
+  /**
+   * ذخیره توکن JWT در localStorage
+   * @param token توکن JWT
+   */
+  setToken(token: string): void {
+    localStorage.setItem(TOKEN_KEY, token);
+  },
+
+  /**
+   * حذف توکن JWT از localStorage
+   */
+  removeToken(): void {
+    localStorage.removeItem(TOKEN_KEY);
+  },
+};
+
+export default authService;
+```
+
+### ۳. `src/context/AuthContext.tsx`
+
+```typescript
+/**
+ * @file src/context/AuthContext.tsx
+ * @description کانتکست احراز هویت برای مدیریت وضعیت احراز هویت کاربر
+ */
+
+import React, { createContext, useState, useEffect } from 'react';
+import authService from '../services/authService';
+import { User, LoginData, RegisterData, AuthContextType } from '../types';
+
+// ایجاد کانتکست با مقدار پیش‌فرض
+export const AuthContext = createContext<AuthContextType>({
+  user: null,
+  isAuthenticated: false,
+  isLoading: true,
+  login: async () => {},
+  register: async () => {},
+  logout: () => {},
+});
+
+interface AuthProviderProps {
+  children: React.ReactNode;
+}
+
+export const AuthProvider: React.FC<AuthProviderProps> = ({ children }) => {
+  const [user, setUser] = useState<User | null>(null);
+  const [isLoading, setIsLoading] = useState<boolean>(true);
+
+  // بررسی وضعیت احراز هویت در هنگام بارگذاری
+  useEffect(() => {
+    const checkAuth = async () => {
+      try {
+        // بررسی وجود توکن
+        const token = authService.getToken();
+        
+        if (token) {
+          // دریافت اطلاعات کاربر
+          const userData = await authService.getCurrentUser();
+          setUser(userData);
+        }
+      } catch (error) {
+        // در صورت بروز خطا، توکن را حذف می‌کنیم
+        console.error('خطا در بررسی وضعیت احراز هویت:', error);
+        authService.removeToken();
+        setUser(null);
+      } finally {
+        setIsLoading(false);
+      }
+    };
+
+    checkAuth();
+  }, []);
+
+  /**
+   * ورود کاربر
+   * @param data داده‌های ورود
+   */
+  const login = async (data: LoginData) => {
+    setIsLoading(true);
+    try {
+      const response = await authService.login(data);
+      setUser(response.user || null);
+    } finally {
+      setIsLoading(false);
+    }
+  };
+
+  /**
+   * ثبت‌نام کاربر
+   * @param data داده‌های ثبت‌نام
+   */
+  const register = async (data: RegisterData) => {
+    setIsLoading(true);
+    try {
+      const response = await authService.register(data);
+      setUser(response.user || null);
+    } finally {
+      setIsLoading(false);
+    }
+  };
+
+  /**
+   * خروج کاربر
+   */
+  const logout = () => {
+    authService.logout();
+    setUser(null);
+  };
+
+  // مقدار کانتکست
+  const value: AuthContextType = {
+    user,
+    isAuthenticated: !!user,
+    isLoading,
+    login,
+    register,
+    logout,
+  };
+
+  return <AuthContext.Provider value={value}>{children}</AuthContext.Provider>;
+};
+```
+
+### ۴. `src/hooks/useAuth.ts`
+
+```typescript
+/**
+ * @file src/hooks/useAuth.ts
+ * @description هوک سفارشی برای استفاده از کانتکست احراز هویت
+ */
+
+import { useContext } from 'react';
+import { AuthContext } from '../context/AuthContext';
+import { AuthContextType } from '../types';
+
+/**
+ * هوک سفارشی برای استفاده از کانتکست احراز هویت
+ * @returns مقدار کانتکست احراز هویت
+ */
+export const useAuth = (): AuthContextType => {
+  const context = useContext(AuthContext);
+
+  if (!context) {
+    throw new Error('useAuth باید درون AuthProvider استفاده شود');
+  }
+
+  return context;
+};
+```
+
+### ۵. `src/routes/ProtectedRoute.tsx`
+
+```typescript
+/**
+ * @file src/routes/ProtectedRoute.tsx
+ * @description کامپوننت مسیر محافظت شده برای مسیرهایی که نیاز به احراز هویت دارند
+ */
+
+import React from 'react';
+import { Navigate, useLocation } from 'react-router-dom';
+import { useAuth } from '../hooks/useAuth';
+
+interface ProtectedRouteProps {
+  element: React.ReactElement;
+  redirectPath?: string;
+}
+
+/**
+ * کامپوننت مسیر محافظت شده
+ * در صورت عدم احراز هویت، کاربر را به مسیر مشخص شده هدایت می‌کند
+ */
+const ProtectedRoute: React.FC<ProtectedRouteProps> = ({
+  element,
+  redirectPath = '/login',
+}) => {
+  const { isAuthenticated, isLoading } = useAuth();
+  const location = useLocation();
+
+  // نمایش لودینگ در حین بررسی وضعیت احراز هویت
+  if (isLoading) {
+    return (
+      <div className="flex items-center justify-center h-screen">
+        <div className="animate-spin rounded-full h-12 w-12 border-t-2 border-b-2 border-primary-500"></div>
+      </div>
+    );
+  }
+
+  // اگر کاربر احراز هویت نشده باشد، به مسیر مشخص شده هدایت می‌شود
+  if (!isAuthenticated) {
+    return <Navigate to={redirectPath} state={{ from: location }} replace />;
+  }
+
+  // در غیر این صورت، المان مورد نظر نمایش داده می‌شود
+  return element;
+};
+
+export default ProtectedRoute;
+```
+
+## نحوه استفاده از پرامپت
+
+1. کل محتوای بخش "پرامپت کامل" را کپی کنید.
+2. آن را در ابزار کدنویسی هوش مصنوعی مانند Cursor AI قرار دهید.
+3. از هوش مصنوعی بخواهید که کدهای مورد نیاز را بر اساس پرامپت تولید کند.
+4. کدهای تولید شده را در فایل‌های مربوطه در پروژه خود ذخیره کنید.
+5. وابستگی‌های مورد نیاز را نصب کنید:
+   ```bash
+   npm install axios react-router-dom react-hook-form zod @hookform/resolvers
+   ```
