--- a/Docs/05-نقشه-راه/01-نسخه-اولیه/نقشه-راه-نسخه-اولیه.md
+++ b/Docs/05-نقشه-راه/01-نسخه-اولیه/نقشه-راه-نسخه-اولیه.md
@@ -23,10 +23,10 @@
 
 ### فاز ۳: مدیریت پروژه (هفته ۵-۶)
 
-- [ ] طراحی و پیاده‌سازی مدل داده پروژه
-- [ ] پیاده‌سازی API مدیریت پروژه
-- [ ] پیاده‌سازی رابط کاربری مدیریت پروژه
-- [ ] قابلیت ایجاد، ویرایش و حذف پروژه
+- [x] طراحی و پیاده‌سازی مدل داده پروژه
+- [x] پیاده‌سازی API مدیریت پروژه
+- [x] پیاده‌سازی رابط کاربری مدیریت پروژه
+- [x] قابلیت ایجاد، ویرایش و حذف پروژه
 - [ ] قابلیت مدیریت اعضای پروژه
 
 ### فاز ۴: سیستم مستندسازی (هفته ۷-۹)
