--- a/Docs/05-نقشه-راه/01-نسخه-اولیه/نقشه-راه-نسخه-اولیه.md
+++ b/Docs/05-نقشه-راه/01-نسخه-اولیه/نقشه-راه-نسخه-اولیه.md
@@ -31,11 +31,11 @@
 
 ### فاز ۴: سیستم مستندسازی (هفته ۷-۹)
 
-- [ ] طراحی و پیاده‌سازی مدل داده مستندات
-- [ ] پیاده‌سازی API مدیریت مستندات
-- [ ] پیاده‌سازی ویرایشگر مستندات با پشتیبانی از Markdown
-- [ ] قابلیت مدیریت نسخه‌های مختلف مستندات
-- [ ] پیاده‌سازی سیستم دسته‌بندی و جستجوی مستندات
+- [x] طراحی و پیاده‌سازی مدل داده مستندات
+- [x] پیاده‌سازی API مدیریت مستندات
+- [x] پیاده‌سازی ویرایشگر مستندات با پشتیبانی از Markdown
+- [x] قابلیت مدیریت نسخه‌های مختلف مستندات
+- [x] پیاده‌سازی سیستم دسته‌بندی و جستجوی مستندات
 
 ### فاز ۵: ایجنت هوشمند (هفته ۱۰-۱۳)
 
