--- a/Docs/05-نقشه-راه/01-نسخه-اولیه/03-ایجنت-هوشمند.md
+++ b/Docs/05-نقشه-راه/01-نسخه-اولیه/03-ایجنت-هوشمند.md
@@ -10,12 +10,12 @@
 
 ### فاز 1: زیرساخت پایه و اتصال به سرویس‌دهنده‌ها
 
-**هدف**: ایجاد زیرساخت پایه برای اتصال به سرویس‌دهنده‌های هوش مصنوعی
+**هدف**: ایجاد زیرساخت پایه برای اتصال به سرویس‌دهنده‌های هوش مصنوعی و مدیریت جلسات مکالمه.
 
 #### کارهای انجام شده:
 
 - [x] طراحی معماری سیستم ایجنت هوشمند
-- [x] ایجاد مدل‌های داده در Prisma
+- [x] ایجاد مدل‌های داده در Prisma (شامل AIProvider, AIApiKey, AIModel, AISession, AIMessage)
 - [x] پیاده‌سازی رابط مشترک (IAIProvider)
 - [x] پیاده‌سازی کلاس پایه (BaseAIProvider)
 - [x] پیاده‌سازی کارخانه (AIProviderFactory)
@@ -26,7 +26,9 @@
 - [x] پیاده‌سازی Adapter برای Anthropic (Claude)
 - [x] پیاده‌سازی Adapter برای OpenRouter
 - [x] پیاده‌سازی Adapter برای Grok AI
-- [x] ایجاد کنترلر و مسیرهای API
+- [x] ایجاد کنترلر و مسیرهای API برای مدیریت Provider ها، API Key ها و مدل‌ها
+- [x] ایجاد کنترلر و مسیرهای API برای مدیریت جلسات هوش مصنوعی (AISession - شامل POST, GET, PUT, DELETE)
+- [x] ایجاد کنترلر و مسیرهای API برای مدیریت پیام‌ها در جلسات (AIMessage - شامل POST برای ارسال پیام)
 
 #### کارهای باقی‌مانده:
 
@@ -67,10 +69,11 @@
 
 در حال حاضر، تمرکز اصلی بر روی تکمیل فاز 1 و ایجاد زیرساخت پایه برای سیستم ایجنت هوشمند است. کارهای زیر در دست انجام هستند:
 
-1. اصلاح و بهبود Adapter‌های موجود
-2. تست عملکرد Adapter‌ها با کلیدهای API واقعی
-3. بهبود مدیریت خطاها و گزارش‌دهی
-4. آماده‌سازی پیاده‌سازی واسط کاربری مدیریت سرویس‌دهنده‌ها و کلیدهای API
+1.  اصلاح و بهبود Adapter‌های موجود
+2.  تست عملکرد Adapter‌ها با کلیدهای API واقعی
+3.  تست کامل APIهای مربوط به AISession و AIMessage
+4.  بهبود مدیریت خطاها و گزارش‌دهی
+5.  آماده‌سازی پیاده‌سازی واسط کاربری مدیریت سرویس‌دهنده‌ها، کلیدهای API، مدل‌ها و جلسات هوش مصنوعی.
 
 ## زمان‌بندی
 
@@ -102,4 +105,4 @@
 2. **یادگیری از تعامل کاربر**: بهبود پاسخ‌ها بر اساس بازخورد و تعامل کاربران.
 3. **ایجنت خودکار**: توسعه ایجنت‌هایی که به صورت خودکار وظایف را انجام می‌دهند.
 4. **سیستم پیشنهاددهنده**: ایجاد سیستم پیشنهاددهنده برای کمک به کاربران در استفاده بهتر از هوش مصنوعی.
-5. **افزودن سرویس‌دهنده‌های جدید**: پشتیبانی از سرویس‌دهنده‌های جدید هوش مصنوعی در آینده. 
+5. **افزودن سرویس‌دهنده‌های جدید**: پشتیبانی از سرویس‌دهنده‌های جدید هوش مصنوعی در آینده.
