--- a/Docs/05-نقشه-راه/01-نسخه-اولیه/نقشه-راه-نسخه-اولیه.md
+++ b/Docs/05-نقشه-راه/01-نسخه-اولیه/نقشه-راه-نسخه-اولیه.md
@@ -39,8 +39,15 @@
 
 ### فاز ۵: ایجنت هوشمند (هفته ۱۰-۱۳)
 
-- [ ] پیکربندی و یکپارچه‌سازی با API هوش مصنوعی
-- [ ] پیاده‌سازی چت هوشمند برای کمک به مستندسازی
+- [x] پیکربندی و یکپارچه‌سازی با API هوش مصنوعی (مدیریت Provider ها، API Key ها، مدل‌ها)
+- [ ] پیاده‌سازی APIهای مدیریت جلسات هوش مصنوعی (AISession: POST, GET, PUT, DELETE)
+- [ ] پیاده‌سازی APIهای مدیریت پیام‌ها در جلسات (AIMessage: POST برای ارسال پیام و دریافت پاسخ)
+- [ ] پیاده‌سازی چت هوشمند در فرانت‌اند با استفاده از APIهای AISession و AIMessage
+- [ ] پیاده‌سازی قابلیت ذخیره و بازیابی تاریخچه مکالمات
+- [ ] پیاده‌سازی تولید خودکار مستندات بر اساس کد پروژه (قابلیت اولیه)
+- [ ] پیاده‌سازی تحلیل و پیشنهاد بهبود مستندات (قابلیت اولیه)
+- [ ] پیاده‌سازی قابلیت یادگیری از الگوهای پروژه (مفهوم اولیه)
+
 - [ ] پیاده‌سازی تولید خودکار مستندات بر اساس کد پروژه
 - [ ] پیاده‌سازی تحلیل و پیشنهاد بهبود مستندات
 - [ ] پیاده‌سازی قابلیت یادگیری از الگوهای پروژه
@@ -114,4 +121,4 @@
 
 - نسخه اولیه باید حداقل قابلیت‌های لازم برای جذب کاربران اولیه را داشته باشد
 - هزینه‌های زیرساخت باید در حد ممکن پایین نگه داشته شود
-- مستندسازی خود پروژه باید به طور مداوم انجام شود 
+- مستندسازی خود پروژه باید به طور مداوم انجام شود
