--- a/Docs/07-گزارش-پیشرفت/03-ماژول-مستندسازی/گزارش-پیشرفت-مستندسازی.md
+++ b/Docs/07-گزارش-پیشرفت/03-ماژول-مستندسازی/گزارش-پیشرفت-مستندسازی.md
@@ -123,23 +123,50 @@
    - 🔄 **وضعیت:** نیاز به طراحی و پیاده‌سازی
    - 📋 **کارهای لازم:** مدل Tag، رابطه many-to-many با Document
 
-## مراحل بعدی توسعه
+## 📋 نقشه راه توسعه
 
-1. **جستجوی پیشرفته در مستندات**:
-   - امکان جستجو در محتوای مستندات
-   - فیلتر کردن مستندات براساس تگ‌ها و سایر ویژگی‌ها
+### اولویت بالا (فاز بعدی) 🔥
 
-2. **مقایسه نسخه‌ها**:
-   - نمایش تفاوت‌های بین دو نسخه از یک مستند
-   - امکان برگشت به نسخه‌های قبلی
+1. **پیاده‌سازی نسخه‌بندی مستندات**:
+   - ✅ **بک‌اند:** ایجاد مدل DocumentVersion در schema
+   - ✅ **بک‌اند:** API‌های CRUD برای نسخه‌ها
+   - ✅ **فرانت‌اند:** فعال‌سازی توابع نسخه‌سازی در documentService
+   - ✅ **فرانت‌اند:** بهبود صفحه NewVersionPage
 
-3. **همکاری گروهی**:
-   - امکان اشتراک‌گذاری مستندات با سایر کاربران
-   - سیستم نظردهی و بحث روی مستندات
+2. **بهبود مدیریت خطاها**:
+   - ✅ **فرانت‌اند:** نوتیفیکیشن‌های بهتر
+   - ✅ **فرانت‌اند:** مدیریت loading states
+   - ✅ **بک‌اند:** پیام‌های خطای واضح‌تر
 
-4. **ادغام با هوش مصنوعی**:
-   - پیشنهاد بهبود محتوای مستندات با استفاده از هوش مصنوعی
-   - تولید خودکار مستندات براساس کد پروژه
+### اولویت متوسط (فاز دوم) 📈
+
+3. **ساختار درختی مستندات**:
+   - 🔄 **بک‌اند:** اضافه کردن فیلد parentId به مدل Document
+   - 🔄 **فرانت‌اند:** کامپوننت TreeView برای نمایش ساختار
+   - 🔄 **فرانت‌اند:** drag & drop برای تغییر ساختار
+
+4. **سیستم تگ‌گذاری**:
+   - 🔄 **بک‌اند:** مدل Tag و رابطه با Document
+   - 🔄 **فرانت‌اند:** کامپوننت TagInput
+   - 🔄 **فرانت‌اند:** فیلتر بر اساس تگ‌ها
+
+5. **جستجوی پیشرفته**:
+   - 🔄 **بک‌اند:** Full-text search در محتوای مستندات
+   - 🔄 **فرانت‌اند:** صفحه جستجو با فیلترهای پیشرفته
+
+### اولویت پایین (فاز سوم) 📊
+
+6. **مقایسه نسخه‌ها**:
+   - 🔄 **فرانت‌اند:** کامپوننت diff viewer
+   - 🔄 **فرانت‌اند:** نمایش تغییرات بین نسخه‌ها
+
+7. **همکاری گروهی**:
+   - 🔄 **بک‌اند:** سیستم مجوزها و اشتراک‌گذاری
+   - 🔄 **فرانت‌اند:** مدیریت دسترسی‌ها
+
+8. **ادغام با هوش مصنوعی**:
+   - 🔄 **بک‌اند:** API‌های تولید محتوا
+   - 🔄 **فرانت‌اند:** دکمه‌های کمک AI در ویرایشگر
 
 ## نتیجه‌گیری
 
